modal hidden on page load

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     -->
                 </section>
 
-                <section class="lightbox ">
+                <section class="lightbox hidden">
                     <div class="modal-filter "></div>
                     <div class="frame-container">
                         <label for="times">new search --> <i id="times" class="fa fa-times" aria-hidden="true"></i></label>
@@ -98,7 +98,7 @@
                         <div id="result-carousel" class="responsive">
 
 
-                            <div>
+                            <!--<div>
                                 <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
                                 <label class="slide-label" for="da-force">Night Grinders</label>
                             </div>
@@ -116,7 +116,7 @@
                             </div>
                             <div>
                                 <img class="video-thumbnail" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
-                            </div>
+                            </div>-->
 
                             
                         </div>
