--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Toobverse</title>
         <meta charset="UTF-8">
-        <meta name="description" content="A web page for users to search YouTube videos and view them.">
+        <meta name="description" content="A web page for users to search YouTube media and discover HD quality videos as well as live content">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Normalize.css, a cross-browser reset file -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
