--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <i id="burger" class="fa fa-bars" aria-hidden="true"></i>
                 <ul class="dropdown-content">
                     <li><a class="explore" href="#main-container">Explore</a></li>
-                    <li><a href="#">4K</a></li>
-                    <li><a href="#">Live</a></li>
-                    <li><a href="#">Mission</a></li>
-                    <li><a href="#">Connect</a></li>
+                    <li><a class="nav-4k" href="#">4K</a></li>
+                    <li><a class="live" href="#">Live</a></li>
+                    <li><a class="mission" href="#">Mission</a></li>
+                    <!--<li><a href="#">Connect</a></li>-->
                 </ul>
             </nav>
 
@@ -43,8 +43,19 @@
 
             <section id="search-container" class="">
                 <div id="form-container" class="">
-                    <label for="form" id="query-label" class="hidden">'<span class="user-query"></span>' Results</label> <!-- ALIEN Interstellar Super star epic racing  -->
+                    <label for="form" id="query-label" class="hidden">
+                        <span id="search-results-span">'<span class="user-query"></span>' <span id="results-type"></span> Results</span>
+                        <span id="browse-videos-span" class="hidden"></span>
+                    </label> <!-- ALIEN Interstellar Super star epic racing  -->
                     <form id="form" class="search-form">
+                        <div class="filter">
+                            <span>Refine</span>
+                            <input id="hd-checkbox" data-state-id="hd_filter" type="checkbox" name="quality" value="">
+                            <label for="hd-checkbox">HD only</label>
+                            <br>
+                            <input id="4k-checkbox" data-state-id="_4k_filter" type="checkbox" name="quality" value="">
+                            <label for="4k-checkbox">4k</label>
+                        </div>
                         <input id="query" type="text" name="" value="" placeholder="Search youtube . . ." autocomplete="off">
                         <button id="search-btn" type="submit">Search</button>
                     </form>
@@ -83,46 +94,98 @@
                     <a href="https://www.youtube.com/watch?v=Boh9N2eheSQ" target="__blank"><img src="https://i.ytimg.com/vi/QH8fsfsvWx4/mqdefault.jpg" alt=""></a>
                     <a href="https://www.youtube.com/watch?v=Boh9N2eheSQ" target="__blank"><img src="https://i.ytimg.com/vi/xTe0uTcJSwQ/mqdefault.jpg" alt=""></a>
                     -->
+                    <!--<div class="next-page-btn-container hidden">
+                        <span id="next-page-btn">More</span>
+                    </div>-->
                 </section>
 
-                <section class="lightbox hidden">
+                <section id="lbox" class="lightbox hidden clearfix">
                     <div class="modal-filter "></div>
                     <div class="frame-container">
-                        <label for="times">new search --> <i id="times" class="fa fa-times" aria-hidden="true"></i></label>
-                        <iframe id="frame" src="https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0" allowfullscreen></iframe> <!-- https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0 --> 
+                        <label for="times"><span id="new-search-times-label">new search <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </span><i id="times" class="fa fa-times" aria-hidden="true"></i></label>
+                       <div id="frame-wrap">
+                            <iframe id="frame" src="https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0" allowfullscreen></iframe> <!-- https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0 --> 
+                            <i id="enlarge" class="fa fa-expand" aria-hidden="true"></i>
+                            <label for="enlarge">
+                                click to enlarge video<i class="fa fa-long-arrow-up" aria-hidden="true"></i></i>
+                            </label>
+                            <label for="minimize" class="hidden">
+                                click to mimimize video <i id="minimize" class="fa fa-window-minimize" aria-hidden="true"></i>
+                            </label>
+                       </div>
                         <label class="video-info" for="frame">
                             <h4 class="video-hx" id="video-name">Benzmixer</h4>
-                            <h5 class="video-hx"><a id="channel-name" href="#" target="__blank">Dubstars</a></h5>
+                            <h5 class="video-hx">check out => <a id="channel-name" href="#" target="__blank">Dubstars</a></h5>
+                            <h5 class="video-hx published-date">Uploaded <span id="month">6</span> / <span id="year">2017</span></h5>
                         </label>
                         
                         <div id="result-carousel" class="responsive">
 
 
-                            <!--<div>
+                            <div>
                                 <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
                                 <label class="slide-label" for="da-force">Night Grinders</label>
                             </div>
                             <div>
-                                <img class="video-thumbnail" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders</label>
                             </div>
                             <div>
-                                <img class="video-thumbnail" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 3RD</label>
                             </div>
                             <div>
-                                <img class="video-thumbnail" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders</label>
                             </div>
                             <div>
-                                <img class="video-thumbnail" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 5TH</label>
                             </div>
                             <div>
-                                <img class="video-thumbnail" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
-                            </div>-->
-
-                            
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 6TH</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 7TH</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 8TH</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 9TH</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 11TH</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders 13TH</label>
+                            </div>
+                            <div>
+                                <img class="video-thumbnail" id="da-force" src="https://i.ytimg.com/vi/Boh9N2eheSQ/mqdefault.jpg" alt="">
+                                <label class="slide-label" for="da-force">Night Grinders</label>
+                            </div>
                         </div>
                         <label for="result-carousel">'<span class="user-query"></span>' Results</label>
                     </div>
                 </section>
+                <div class="page-controls-container hidden">
+                    <span id="prev-page-btn">Prev</span> |
+                    <span id="next-page-btn">Next</span>
+                </div>
             </section>
 
         </main>
@@ -131,9 +194,10 @@
             <ul class="footer-nav">
                 <li><a class="top" href="#">Top</a></li>
                 <li><a class="explore" href="#">Explore</a></li>
-                <li><a href="#">4K</a></li>
-                <li><a href="#">Our Journey</a></li>
-                <li><a href="#">Connect</a></li>
+                <li><a class="nav-4k" href="#">4K</a></li>
+                <li><a class="live" href="#">Live</a></li>
+                <li><a href="#">Mission</a></li>
+                <!--<li><a href="#">Connect</a></li>-->
             </ul>
         </footer>
 
