--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="frame-container">
                        <label for="times"><span id="new-search-times-label">new search <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </span><i id="times" class="fa fa-times" aria-hidden="true"></i></label>
                        <div id="frame-wrap">
-                            <iframe id="frame" src="https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0" allowfullscreen></iframe> <!-- https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0 --> 
+                            <iframe id="frame" src="" allowfullscreen></iframe> <!-- https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0 --> 
                             <i id="enlarge" class="fa fa-expand" aria-hidden="true"></i>
                             <label for="enlarge">
                                 click to enlarge video<i class="fa fa-long-arrow-up" aria-hidden="true"></i></i>
