--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <title>Toobverse</title>
         <meta charset="UTF-8">
         <meta name="description" content="A web page for users to search YouTube media and discover HD quality videos as well as live content">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <!-- Normalize.css, a cross-browser reset file -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./slick-1.6.0/slick/slick-theme.css"/>
+        <!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
         <link href="styles/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Cabin+Condensed|Abel|Cormorant+Garamond|Droid+Sans:400,700|Lobster|Molengo|Proza+Libre|Quicksand|Rubik|Pacifico" rel="stylesheet">
     </head>
@@ -177,8 +178,10 @@
 
 
         <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
+        <!--<script src="https://code.jquery.com/mobile/1.5/jquery.mobile-1.5.min.js"></script>-->
         <script type="text/javascript" src="./slick-1.6.0/slick/slick.min.js"></script>
         <script src="https://use.fontawesome.com/3e1d7b509c.js"></script>
+        <!--<script src="jquery-mobile-1.5.0-alpha.1/js/jquery.mobile.js" type="text/javascript"></script>-->
         <script src="video-categories.js" type="text/javascript"></script>
         <script src="app.js" type="text/javascript"></script>
     </body>
