--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <!-- Normalize.css, a cross-browser reset file -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="./slick-1.6.0/slick/slick-theme.css"/>
-        <!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
-        <link href="styles/main.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="build/libs//slick-1.6.0/slick/slick-theme.css"/>
+        <link href="build/main-min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Cabin+Condensed|Abel|Cormorant+Garamond|Droid+Sans:400,700|Lobster|Molengo|Proza+Libre|Quicksand|Rubik|Pacifico" rel="stylesheet">
     </head>
     <body>
@@ -25,7 +24,6 @@
                     <li><a class="nav-4k" href="#">4K</a></li>
                     <li><a class="live" href="#">Live</a></li>
                     <li><a class="mission" href="#">Mission</a></li>
-                    <!--<li><a href="#">Connect</a></li>-->
                 </ul>
             </nav>
 
@@ -65,7 +63,7 @@
                             <label for="hd-checkbox">
                                 <input id="hd-checkbox" data-state-id="hd_filter" type="checkbox" name="quality" value="">
                             HD only</label>
-                            <!--<br>-->
+                         
                             <label for="_4k-checkbox">
                                 <input id="_4k-checkbox" data-state-id="_4k_filter" type="checkbox" name="quality" value="">
                             4k</label>
@@ -125,7 +123,7 @@
                     <div class="frame-container">
                        <label for="times"><span id="new-search-times-label">new search <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </span><i id="times" class="fa fa-times" aria-hidden="true"></i></label>
                        <div id="frame-wrap">
-                            <iframe id="frame" src="" allowfullscreen></iframe> <!-- https://www.youtube.com/embed/Boh9N2eheSQ?autoplay=0 --> 
+                            <iframe id="frame" src="" allowfullscreen></iframe> 
                             <i id="enlarge" class="fa fa-expand" aria-hidden="true"></i>
                             <label for="enlarge">
                                 click to enlarge video<i class="fa fa-long-arrow-up" aria-hidden="true"></i></i>
@@ -171,18 +169,14 @@
                 <li><a class="nav-4k" href="#">4K</a></li>
                 <li><a class="live" href="#">Live</a></li>
                 <li><a class="mission" href="#">Mission</a></li>
-                <!--<li><a href="#">Connect</a></li>-->
             </ul>
             <span class="copyright">copyright &copy; 2017 Mike Schmerbeck</span>
         </footer>
 
 
         <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
-        <!--<script src="https://code.jquery.com/mobile/1.5/jquery.mobile-1.5.min.js"></script>-->
-        <script type="text/javascript" src="./slick-1.6.0/slick/slick.min.js"></script>
+        <script src="build/libs/slick-1.6.0/slick/slick.min.js" type="text/javascript"></script>
         <script src="https://use.fontawesome.com/3e1d7b509c.js"></script>
-        <!--<script src="jquery-mobile-1.5.0-alpha.1/js/jquery.mobile.js" type="text/javascript"></script>-->
-        <script src="video-categories.js" type="text/javascript"></script>
-        <script src="app.js" type="text/javascript"></script>
+        <script src="build/bundle-min.js" type="text/javascript"></script>
     </body>
 </html>
